log for NewWaterOthersScript